# -Introduction-to-C-Course

./: README.md
task2/: CMakeLists.txt  main.cpp  task
task4/: CMakeLists.txt  main.cpp  task
task5/: CMakeLists.txt  Vector3D.h  input.txt  main.cpp  output.txt  task
task6/: CMakeLists.txt  commands.txt  list.txt  main.cpp  task
task6/tests/: AddByValue.cpp  CMakeLists.txt  Count.cpp  DeleteByName.cpp  DeleteByValue.cpp  FindByName.cpp  FindByValue.cpp
task7/: CMakeLists.txt  input.txt  main.cpp  task
task_1/: CMakeLists  main.cpp  task1
